# Warehouse-Automation

./: README.md
beginner_tutorials/: package.xml
beginner_tutorials/scripts/: turtle_revolve.py
pkg_iot_ros_bridge/: CMakeLists.txt  package.xml
pkg_iot_ros_bridge/action/: msgIotRos.action
pkg_iot_ros_bridge/config/: config_iot_ros.yaml
pkg_iot_ros_bridge/msg/: msgMqttSub.msg
pkg_iot_ros_bridge/scripts/: node_iot_ros_bridge_action_client.py  node_iot_ros_bridge_action_server.py
pkg_iot_ros_bridge/scripts/pyiot/: iot.py
pkg_moveit_ur5_1/: .setup_assistant  package.xml
pkg_moveit_ur5_1/config/: controller.yaml  gazebo_ros_control_params.yaml  trajectory_control.yaml  ur5.srdf  ur5_1_moveit_controller.yaml  ur5_1_moveit_controllers.yaml
pkg_moveit_ur5_1/launch/: demo_planning_execution.launch  final_ur5_gazebo_moveit.launch  ur5_moveit_controller_manager.launch  ur5_moveit_controller_manager.launch.xml
pkg_ros_actions/: CMakeLists.txt  package.xml
pkg_ros_actions/action/: myActionMsg.action
pkg_ros_actions/scripts/: node_simple_action_client_turtle.py  node_simple_action_server_turtle.py
pkg_ros_basics/: CMakeLists.txt  package.xml
pkg_ros_basics/config/: config_my.yaml
pkg_ros_basics/launch/: filename.launch  web_node.launch
pkg_ros_basics/src/: move.py
pkg_ros_iot_bridge/: CMakeLists.txt  package.xml
pkg_ros_iot_bridge/action/: msgRosIot.action
pkg_ros_iot_bridge/config/: config_pyiot.yaml
pkg_ros_iot_bridge/scripts/: node_action_server_ros_iot_bridge.py
pkg_task0/: CMakeLists.txt  package.xml
pkg_task0/bag_files/: my_turtle.bag
pkg_task0/launch/: task0.launch
pkg_task0/scripts/: node_turtle_revolve.py
pkg_task1/: CMakeLists.txt  package.xml
pkg_task1/bag_files/: my_turtle.bag
pkg_task1/launch/: shell_webpages_launch.sh  task1.launch
pkg_task1/scripts/: node_iot_action_client_turtle.py  node_simple_action_server_turtle.py
pkg_task2/: CMakeLists.txt  package.xml
pkg_task2/bag_files/: t2.b.bag  t2.bag
pkg_task2/config/rviz/: ur5_1_shelf.scene
pkg_task2/launch/: task2.launch
pkg_task2/scripts/: node_t2_ur5_1_pick_place.py
pkg_task3/: CMakeLists.txt  package.xml
pkg_task3/bag_files/: t3.bag
pkg_task3/launch/: task3_solution.launch
pkg_task3/script/: node_t3.py
pkg_task4/config/saved_trajectories/: lst_joint_angles_01_2.yaml  lst_joint_angles_01_3.yaml  lst_joint_angles_02_2.yaml  lst_joint_angles_11_3.yaml  lst_joint_angles_20_2.yaml  lst_joint_angles_21_3.yaml  lst_joint_angles_30_2.yaml  lst_joint_angles_30_3.yaml  lst_joint_angles_green.yaml  lst_joint_angles_home_00.yaml  lst_joint_angles_home_11.yaml  lst_joint_angles_home_12.yaml  lst_joint_angles_home_20.yaml  lst_joint_angles_yellow.yaml
pkg_task4/launch/: task4_solution.launch
pkg_task4/msg/: myMessage.msg  myModel.msg
pkg_task4/scripts/: task4_part1.py  task4_part2.py
vb_t4_0623/pkg_task4/: CMakeLists.txt  package.xml
vb_t4_0623/pkg_task4/bag_files/: t4.bag
vb_t4_0623/pkg_task4/config/saved_trajectories/: lst_joint_angles_00_2.yaml  lst_joint_angles_00_3.yaml  lst_joint_angles_02_3.yaml  lst_joint_angles_10_2.yaml  lst_joint_angles_10_3.yaml  lst_joint_angles_11_2.yaml  lst_joint_angles_12_2.yaml  lst_joint_angles_12_3.yaml  lst_joint_angles_20_3.yaml  lst_joint_angles_21_2.yaml  lst_joint_angles_home_0.yaml  lst_joint_angles_home_01.yaml  lst_joint_angles_home_02.yaml  lst_joint_angles_home_10.yaml  lst_joint_angles_home_21.yaml  lst_joint_angles_home_30.yaml  lst_joint_angles_home_g.yaml  lst_joint_angles_home_r.yaml  lst_joint_angles_home_y.yaml  lst_joint_angles_red.yaml
